arrumando a land page

--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -86,6 +86,7 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
+      
     }
 
     .text-content {
@@ -94,7 +95,7 @@
 
     .text-content h1 {
       font-size: 2.5em;
-      color: #3c0891;
+      color: #003ad8;
       margin-bottom: 20px;
       font-size: 2.5em;
       
@@ -116,11 +117,13 @@
       gap: 20px;
       flex-wrap: wrap;
       margin-top: 40px;
+      margin-bottom: 60px;
+      
     }
 
     .circulo {
-      width: 150px;
-      height: 150px;
+      width: 170px;
+      height: 170px;
       background-color: #f4f4f4;
       border-radius: 50%;
       display: flex;
@@ -130,11 +133,48 @@
       padding: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
+      margin:  0px 15px;
     }
 
     .circulo:hover {
       transform: scale(1.05);
     }
+
+    .carrossel {
+  width: 100%;
+  max-width: 350px;
+  height: auto;
+  overflow: hidden;
+  
+}
+
+.carrossel img {
+  width: 100%;
+  display: none;
+  border-radius: 10px;
+  transition: opacity 2s ease-in-out;
+}
+
+.carrossel img.ativa {
+  display: block;
+  opacity: 2;
+}
+
+.footer h5 {
+  color: #004aad;
+  font-weight: bold;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+.circulo > p{
+  font-size: 1.3em;
+  font-weight: bolder;
+  color: #00307e88;
+  
+}
+
 
     @media (max-width: 768px) {
       .text-content h1 {
@@ -152,4 +192,16 @@
     display: none;
       }
     }
+
+    .carrossel {
+    display: none;
+  }
+
+  .circulo > p{
+  font-size:1em;
+  font-weight: bolder;
+  color: #00307e88;
+  
 }
+}
+
