fundo dos circukis

--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -175,6 +175,22 @@
   
 }
 
+#circulofoto1{
+  background:#00307e3d ;
+}
+#circulofoto2{
+  background:#00307e3d ;
+}
+#circulofoto3{
+  background:#00307e3d ;
+}
+#circulofoto4{
+  background:#00307e3d ;
+}
+#circulofoto5{
+  background:#00307e3d ;
+}
+
 
     @media (max-width: 768px) {
       .text-content h1 {
