--- a/Estilos/paginas.css
+++ b/Estilos/paginas.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
   }
   
-  body {
+  body, html  {
     background-color: #fff;
     font-family: Arial, sans-serif;
+    text-align: left;
   }
   
   .perfil-img {
