--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -168,10 +168,11 @@
 .footer a:hover {
   text-decoration: underline;
 }
-.circulo > p{
+.circulo > p {
   font-size: 1.3em;
   font-weight: bolder;
   color: #0003aa;
+  
   
   
   
@@ -179,7 +180,10 @@
 
   .circulos a {
     text-decoration: none;
-    color: #000000;
+    color: #08034e96;
+    text-align: center;
+    padding: 5px;
+    font-weight: bold;
   }
 
 #circulofoto1{
