--- a/Estilos/paginas.css
+++ b/Estilos/paginas.css
@@ -133,8 +133,9 @@
       position: static;
       display: block;
       width: 100%;
-      text-align: center;
+      text-align: center !important;
       margin-top: 20px;
+      
     }
   
     .navbar-brand {
