--- a/Estilos/paginas.css
+++ b/Estilos/paginas.css
@@ -140,11 +140,11 @@
   
     .navbar-brand {
       font-size: 1.5rem;
-      text-align: center;
+      text-align: left;
     }
   
     .navbar-nav {
-      text-align: center;
+      text-align: left;
       margin-top: 10px;
     }
   
