--- a/Estilos/paginas.css
+++ b/Estilos/paginas.css
@@ -115,12 +115,12 @@
   
     .link-dado {
       font-size: 1rem;
-      text-align: left;
+      text-align: left !important;
     }
   
     .info-text {
       font-size: 0.95rem;
-      text-align: left;
+      text-align: left !important;
     }
   
     .section-imagem {
